Feat: gmail service

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -66,6 +66,9 @@ dependencies {
 	//fcm
 	implementation 'com.google.firebase:firebase-admin:9.1.1'
 	implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+
+	//google mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
